--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,10 +66,8 @@ jobs:
 #          working_directory: ~/project/front-end/
 
       - run:
-          command: ls ~/project/front-end/node_modules/ || echo not found
+          command: ls -la || echo not found
 
-      - run:
-          command: cat ~/project/front-end/package.json || echo not found
 
       - run:
           name: run linter version
